Dodson: Future of Accessibility for Custom Elements.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -121,6 +121,12 @@
         <a href="https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe">Beware smushed off-screen accessible text</a>,
         <i class="website">Medium</i>, 12.10.2016.
       </li>
+      <li>Rob Dodson (developer advocate at Google):
+        <a href="https://medium.com/dev-channel/the-future-of-accessibility-for-custom-elements-291cfb3ffabe">The future of accessibility for custom elements</a>,
+        <i class="blog">Google Dev Channel (on Medium)</i>, 02.10.2017.
+        (Originally published on
+        <a href="https://robdodson.me/the-future-of-accessibility-for-custom-elements/">Rob Dodson's blog</a>.)
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
