Anne Gibson: Reframing Acessibility (ALA 2015).

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -179,6 +179,13 @@
         <i class="blog">Musings</i>, 14.09.2017.
         <!--long piece; @@PDF-->
       </li>
+      <li>Anne Gibson:
+        <a href="https://alistapart.com/article/reframing-accessibility-for-the-web">Reframing Accessibility for the Web</a>,
+        <i class="magazine">A List Apart</i>, 03.02.2015. <br />Quote:
+        <q>We need to change the way we talk about accessibility. Most people are taught that 
+        <a href="http://www.w3.org/WAI/intro/accessibility.php"><q>web accessibility means that people with disabilities can use the Web</q></a>—the official definition from the <abbr>W3C</abbr>. 
+        This is wrong. Web accessibility means that <em>people</em> can use the web.</q>
+      </li>
     </ul>
 
     <h2>Braille</h2>
