Sethfors: Web Accessibility Directive.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -261,6 +261,10 @@
         <a href="https://marcysutton.com/accessibility-is-a-civil-right/">Accessibility is a Civil Right</a>,
         <i class="website">MarcySutton.com</i>, 16.01.2017.
       </li>
+      <li>Hampus Sethfors:
+        <a href="https://axesslab.com/web-accessibility-directive/">Web Accessibility Directive – What it is and how to comply</a>,
+        <i class="site">axess lab</i>, 27.09.2017.
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
