Minor editorial changes (language).

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1614,7 +1614,7 @@
     <h2>Intellectual Disability and Inclusion (<abbr title="Dublin Institute of Technology">DIT</abbr>)</h2>
       <p>The course &ldquo;Intellectual Disability and Inclusion&rdquo; was created by the Dublin Institute of Technology (<abbr>DIT</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=773">course description</a>.
-        The entire content of the course is stored as a set of
+        All content from the course is stored as a set of
         <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqREt5Vml5M3BaRzA"><abbr>OERs</abbr> in a Google Drive folder</a>, except for the videos.
         Below is a breakdown of the content in that folder.
       </p>
@@ -2038,7 +2038,7 @@
       <h2>Accessible Documents (<abbr>TUD</abbr>)</h2>
       <p>The course &ldquo;Accessible Documents&rdquo; was created by the <span lang="de">Technische Universität Dresden</span> (<abbr>TUD</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=757">course description</a>.
-        The entire content of the course is stored as a set of
+        All content from the course is stored as a set of
         <a href="https://drive.google.com/drive/folders/0B7yTykBzKH4fU0FFRElYMUhtZE0"><abbr>OERs</abbr> in a Google Drive folder</a>, except for the videos.
         Below is a breakdown of the content in that folder.
       </p>
@@ -2244,7 +2244,7 @@
       <h2>User-Centered Design for Accessibility (<abbr>HiAO</abbr>)</h2>
       <p>The course &ldquo;User-Centered Design for Accessibility&rdquo; was created by the Oslo and Akershus University College of Applied Sciences (<abbr>HiOA</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=747">course description</a>.
-        The entire content of the course is stored as a set of
+        All content from the course is stored as a set of
         <a href="https://drive.google.com/drive/folders/0B9GyZ3n5dNZ4TmZuWkZ3OFc0ZXc"><abbr>OERs</abbr> in a Google Drive folder</a>, 
         except for the videos, which can be downloaded from a dedicated 
         <a href="https://vimeo.com/channels/1290229">channel on Vimeo</a>.
@@ -2453,7 +2453,7 @@
       <p>The course <a href="http://gpii.eu/moocap/?p=771">Assistive Technologies</a>
         was created by the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>)
         and the <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>.
-        The content of the course is available as a set of <abbr>OERs</abbr> in a 
+        All content from the course is available as a set of <abbr>OERs</abbr> in a 
         <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqbzQ4MG5hdFpSa3M">folder on Google Drive</a>.
       </p>
       <h3>Week 1: Introduction</h3>
@@ -2660,7 +2660,7 @@
       <p>The course <a href="http://gpii.eu/moocap/?p=767">Accessible Mobile Apps</a>
         was created by the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>)
         and the <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>.
-        The content of the course is available as a set of <abbr>OERs</abbr> in a 
+        All content from the course is available as a set of <abbr>OERs</abbr> in a 
         <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqa3hzcTg3NmdQZ1U">folder on Google Drive</a>.
       </p>
       <h3>Week 1</h3>
@@ -2795,7 +2795,7 @@
       <p>The course <a href="http://gpii.eu/moocap/?p=753">Accessible Web</a>
         was created by the <span lang="de">Technische Universität Dresden</span> (<abbr>TUD</abbr>)
         and the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>).
-        The content of the course is available as a set of <abbr>OERs</abbr> in a 
+        All content from the course is available as a set of <abbr>OERs</abbr> in a 
         <a href="https://drive.google.com/drive/folders/0B7yTykBzKH4fRWhZb0w3eFVoMlk">folder on Google Drive</a>.
       </p>
       <h3>Introduction and Goals of the Course</h3>
