Conti: Writer's Guide to Making Accessible Web Content.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -140,6 +140,10 @@
         <a href="https://www.lullabot.com/podcasts/drupalizeme-podcast/web-accessibility-with-marcy-sutton">Web Accessibility with Marcy Sutton</a>,
         <i class="website">Lullabot</i>, 05.10.2017 (podcast).
       </li>
+      <li>Genevieve Conti:
+        <a href="https://zapier.com/blog/accessible-web-content/">The Writer's Guide to Making Accessible Web Content</a>,
+        <i class="blog">Zapier</i>, 17.05.2016.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
