Minor editorial changes.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1614,9 +1614,9 @@
     <h2>Intellectual Disability and Inclusion (<abbr title="Dublin Institute of Technology">DIT</abbr>)</h2>
       <p>The course &ldquo;Intellectual Disability and Inclusion&rdquo; was created by the Dublin Institute of Technology (<abbr>DIT</abbr>).
         See also the <a href="http://gpii.eu/moocap/?p=773">course description</a>.
-        All content from the course is stored as a set of
-        <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqREt5Vml5M3BaRzA"><abbr>OERs</abbr> in a Google Drive folder</a>, except for the videos.
-        Below is a breakdown of the content in that folder.
+        All content from the course is available as
+        <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqREt5Vml5M3BaRzA"><abbr>OERs</abbr> stored in a Google Drive folder</a>,
+        except for the videos. Below is a breakdown of the content in that folder.
       </p>
       <p>The list <a href="http://gpii.eu/moocap/?page_id=893"><abbr>OERs</abbr> for Intellectual Disability and Inclusion</a> is also available on the<abbr>MOOCAP</abbr> website.</p>
       <h3>Week 1</h3>
@@ -2453,9 +2453,10 @@
       <p>The course <a href="http://gpii.eu/moocap/?p=771">Assistive Technologies</a>
         was created by the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>)
         and the <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>.
-        All content from the course is available as a set of <abbr>OERs</abbr> in a 
+        All content from the course is available as <abbr>OERs</abbr> in a 
         <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqbzQ4MG5hdFpSa3M">folder on Google Drive</a>.
       </p>
+      <p>The list <a href="http://gpii.eu/moocap/?page_id=913"><abbr>OERs</abbr> for Assistive Technologies</a> is also available on the<abbr>MOOCAP</abbr> website.</p>
       <h3>Week 1: Introduction</h3>
       <p><a href="https://drive.google.com/drive/folders/0BytF5o2naVX9Z1d5bjRvZUJYWFE"><abbr>OER</abbr> folder</a> on Google Drive.</p>
       <ul>
@@ -2660,9 +2661,10 @@
       <p>The course <a href="http://gpii.eu/moocap/?p=767">Accessible Mobile Apps</a>
         was created by the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>)
         and the <span lang="fr">Université Paris 8 Vincennes Saint-Denis</span>.
-        All content from the course is available as a set of <abbr>OERs</abbr> in a 
+        All content from the course is available as <abbr>OERs</abbr> in a 
         <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqa3hzcTg3NmdQZ1U">folder on Google Drive</a>.
       </p>
+      <p>The list <a href="http://gpii.eu/moocap/?page_id=917"><abbr>OERs</abbr> for Accessible Mobile Apps</a> is also available on the<abbr>MOOCAP</abbr> website.</p>
       <h3>Week 1</h3>
       <p><a href="https://drive.google.com/drive/folders/0BytF5o2naVX9cEtLMTlSM3lCMzA"><abbr>OER</abbr> folder</a> on Google Drive.</p>
       <ul>
@@ -2795,9 +2797,10 @@
       <p>The course <a href="http://gpii.eu/moocap/?p=753">Accessible Web</a>
         was created by the <span lang="de">Technische Universität Dresden</span> (<abbr>TUD</abbr>)
         and the <span lang="de">Johannes Kepler Universität Linz</span> (<abbr>JKU</abbr>).
-        All content from the course is available as a set of <abbr>OERs</abbr> in a 
+        All content from the course is available as <abbr>OERs</abbr> in a 
         <a href="https://drive.google.com/drive/folders/0B7yTykBzKH4fRWhZb0w3eFVoMlk">folder on Google Drive</a>.
       </p>
+      <p>The list <a href="http://gpii.eu/moocap/?page_id=920"><abbr>OERs</abbr> for Accessible Web</a> is also available on the<abbr>MOOCAP</abbr> website.</p>
       <h3>Introduction and Goals of the Course</h3>
       <p><a href="https://drive.google.com/drive/folders/0B5pduB_JZh5EelM2VHFCRU1fVkU"><abbr>OER</abbr> folder</a> on Google Drive.</p>
       <ul>
