OERs for User Interface Personalization.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -3050,6 +3050,84 @@
     </section>
 
 
+    <section id="ui-personalization">
+      <h2>User Interface Personalization (<abbr>HDM</abbr>)</h2>
+      <p>The course &ldquo;User Interface Personalization&rdquo; was created by the <span lang="de">Hochschule der Medien</span>&nbsp;/
+        Stuttgart Media University.
+        See the <a href="http://gpii.eu/moocap/?p=762">course description</a>.
+        All content from the course is available as <abbr>OERs</abbr>:
+        text-based <abbr>OERs</abbr> are available in a 
+        <a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqbjRORV9TekFuVzQ">Google Drive folder</a>;
+        videos are available on 
+        <a href="https://vimeo.com/channels/1259295">Vimeo</a>.
+        Both the videos and their caption files can be downloaded from Vimeo.
+        Below is a list of the <abbr>OERs</abbr> for the course.
+      </p>
+      <h3>Module 1: Introduction to Personalization</h3>
+      <ul>
+        <li><a href="https://vimeo.com/222236107">Introduction to the <abbr>MOOC</abbr> User Interface Personalization</a>:
+          video on Vimeo.
+          <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqLVpuSmd6RlBlT2M">Transcript of the intro video (<abbr title="OpenDocument Format">ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqR1p4SUJ1eFNaTDg">Barriers  (<abbr>ODF</abbr>)</a>: document about barriers that people experience on the Web.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqS3YxSkhxaWlXd1k">Accessibility and Usability (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://vimeo.com/235591486">Accessibility Features in Firefox</a>: video on Vimeo.
+          <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqNzdwekNucFFDWWs">Accessibility Features in Firefox: transcript (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://vimeo.com/227325680">Accessibility Add-ons for Firefox</a>: video on Vimeo.
+          <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqNzdLaF9taDBzS2s">Accessibility Add-ons for Firefox: transcript (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqSmMwcXVTcm00QkU">Accessibility and &ldquo;One Size Fits All&rdquo; (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqUm9lRXVPWnFreDQ">Adaptable Versus Adaptive User Interfaces (<abbr>ODF</abbr>)</a>.
+        </li>
+      </ul>
+      <h3>Module 2: Understanding Personalization on Web Pages and Sites</h3>
+      <ul>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqa3N2QWlpS0dReEU">Describing Adaptable Features as Needs and Preferences (<abbr title="OpenDocument Format">ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqa1J1cVg3eFdmd0E">Alternative Stylesheets (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqeVhlTEdyNXN2Yms">Fonts and Other Characterisitcs (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqWHVVSVRUakotY0k">Navigation (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqV2lTdExIbDBzeXM">Videos: Captions and Audio Description (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqRE9PWUZrTDZBLVk">Advanced Adaptations (<abbr>ODF</abbr>)</a>.
+        </li>
+      </ul>
+      <h3>Module 3: Hands On: Personalizing a Web Interface</h3>
+      <ul>
+        <li><a href="https://vimeo.com/222337728">Introduction to the Hands-on Task</a>: video on Vimeo.
+          <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqUVUzODRncUR6Vnc">Transcript of the video (<abbr title="OpenDocument Format">ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqX0Npb1BxS0ZZYlU">Project: Making A Website Adaptive (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqSm04b01URzRDMEU">The Example Website (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqdTlNRTdPTzFtRXc">Running the Example Website on a Local Server (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://github.com/REMEXLabs/GTx_HDM1.2aX">GitHub repository for the example website</a> (licence: Apache 2.0).
+          <a href="https://remexlabs.github.io/GTx_HDM1.2aX/">Live version of the example website</a>.
+        </li>
+        <li><a href="https://github.com/REMEXLabs/GTx_HDM12aX_preferences">GitHub repository for the website hosting example preference sets</a> (licence: Apache 2.0)..
+          <a href="https://remexlabs.github.io/GTx_HDM12aX_preferences/">Live version of the website hosting example preference sets</a>.
+        </li>
+      </ul>
+      <h3>Module 4: Introduction to <abbr>GPII</abbr></h3>
+      <ul>
+        <li><a href="https://vimeo.com/222331682">Personalization and <abbr>GPII</abbr></a>: video on Vimeo.
+          <a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqUWdEQUdMcV9WTDQ">Transcript of the video (<abbr title="OpenDocument Format">ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqSzc0SFAwbDhvTXM">The Global Public Inclusive Infrastructure or <abbr>GPII</abbr> (<abbr>ODF</abbr>)</a>.
+        </li>
+        <li><a href="https://drive.google.com/open?id=0B_Ytr4BUNCGqMVJIZVB0R0JVWXM">Course Summary and Conclusion (<abbr>ODF</abbr>)</a>.
+        </li>
+      </ul>
+    </section>
   <!--
     <section id="design-innovation">
     <h2>Design Innovation: Inclusive Approaches (University of the Aegean)</h2>
