OERs for Desin Innovation course.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -3128,20 +3128,46 @@
         </li>
       </ul>
     </section>
-  <!--
+
     <section id="design-innovation">
-    <h2>Design Innovation: Inclusive Approaches (University of the Aegean)</h2>
-    <p><a href="https://drive.google.com/drive/folders/0B_Ytr4BUNCGqRTBmbGYxM1EweFk"><abbr>OER</abbr> folder on Google Drive</a>.</p>
+      <h2>Design Innovation: Inclusive Approaches (University of the Aegean)</h2>
+      <p>The course &ldquo;Design Innovation: Inclusive Approaches&rdquo; was created by the
+        <span lang="el">Πανεπιστήμιο Αιγαίου</span> / University of the Aegean.
+        All content from the course is available as <abbr>OERs</abbr>:
+        text-based <abbr>OERs</abbr> are available in a 
+        <a href="https://drive.google.com/drive/u/0/folders/0B_Ytr4BUNCGqRTBmbGYxM1EweFk">Google Drive folder</a>;
+        videos are available on 
+        <a href="https://vimeo.com/channels/1303884">Vimeo</a>.
+        Both the videos and their caption files can be downloaded from Vimeo.
+        Below is a list of the <abbr>OERs</abbr> from the course.
+      </p>
+      <ul>
+        <li>
+          <a href="https://vimeo.com/237891134">Session 1 (video on Vimeo, 24 minutes)</a>:
+          video about design, innovation, inclusive innovation and the social model of disability.
+          <br /><a href="https://drive.google.com/open?id=0B-kbLV8R6-18eVBPeUV5eHFiSVk">Copyright info and metadata</a> (Microsoft Word document).
+        </li>
+        <li>
+          <a href="https://vimeo.com/237891752">Session 2 (video on Vimeo, 17 minutes)</a>:
+          video about self-service kiosks; models of self-service; and  guidelines, standards and legislation.
+          <br /><a href="https://drive.google.com/open?id=0B-kbLV8R6-18RUtlel9pZVVlZU0">Copyright info and metadata</a> (Microsoft Word document).
+        </li>
+        <li>
+          <a href="https://vimeo.com/237891937">Session 3 (video on Vimeo, 13 minutes)</a>:
+          video about robots for older people: innovative aspects; why involve users in the desing process; how to involve users in the design process.
+          <br /><a href="https://drive.google.com/open?id=0B-kbLV8R6-18bkhsSkx0TWVqTms">Copyright info and metadata</a> (Microsoft Word document).
+        </li>
+        <li>
+          <a href="https://vimeo.com/237892110">Session 4 (video on Vimeo, 13 minutes)</a>:
+          video focusing on case studies: products (Oxo, Ford); services (accommodating users with vulnerabilities); products and services.
+          <br /><a href="https://drive.google.com/open?id=0B-kbLV8R6-18cEx4MDZ0bzNlUEU">Copyright info and metadata</a> (Microsoft Word document).
+        </li>
+      </ul>
     </section>
-  -->
   <!--
     <section>
-    <h2>@@</h2>
-    <ul>
-        <li>
-          <a href=""></a>
-          (Microsoft Word document, copyright <span lang="de"></span>).
-        </li>
+      <h2>@@</h2>
+      <ul>
         <li>
           <a href=""></a>
           (Microsoft Word document, copyright <span lang="de"></span>).
@@ -3155,46 +3181,12 @@
           <a href=""></a>.
         </li>
         <li>
-          <a href=""></a>
-          (Microsoft Word document, copyright <span lang="de"></span>).
+          <a href=""></a> (Microsoft Word document).
         </li>
-      <li>
-        <a href=""></a> (Microsoft Word document),
-        images used in the document:
-        <a href=""></a>,
-        <a href=""></a>,
-        <a href=""></a>.
-      </li>
-      <li>
-        <a href=""></a> (Microsoft Word document).
-      </li>
-      <li>
-        <a href=""></a>
-      </li>
-      <li>
-        <ul>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li>
-            <a href=""></a>
-          </li>
-          <li>
-            <a href=""></a>
-          </li>
-        </ul>
-      </li>
-    </ul>
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
     </section>
   -->
   </main>
