Zoë Bryant: accessible address finder.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -144,6 +144,11 @@
         <a href="https://zapier.com/blog/accessible-web-content/">The Writer's Guide to Making Accessible Web Content</a>,
         <i class="blog">Zapier</i>, 17.05.2016.
       </li>
+      <li>Zoë Bryant:
+        <a href="https://red-badger.com/blog/how-to-make-an-accessible-address-finder">How to make an accessible address finder</a>,
+        <i class="blog">Red Badger</i>, 02.10.2017.
+        See also <a href="https://github.com/zoeabryant/accessible-address-finder">accessible-address-finder on GitHub</a>.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
@@ -235,6 +240,10 @@
       </li>
     </ul>
 
+  <!-- Legislation and policy:
+    * European Commission: European Accessibility Act: http://ec.europa.eu/social/main.jsp?catId=1202 
+    * United Nations: Convention on the Rights of Persons with Disabilities (CRPD): https://www.un.org/development/desa/disabilities/convention-on-the-rights-of-persons-with-disabilities.html 
+  -->
     <h2>Legislation, Policy, Lawsuits, &hellip;</h2>
     <ul>
       <li>Erin Mulvaney:
@@ -442,10 +451,6 @@
     * http://evengrounds.com/developers/alternatives-to-captcha opens in a new window
     * http://timkadlec.com/2011/01/alternatives-to-captcha/ opens in a new window
     * http://www.scientificamerican.com/article.cfm?id=pogue-8-alternatives-to-hated-captcha opens in a new window
-  -->
-  <!-- Legislation and policy:
-    * European Commission: European Accessibility Act: http://ec.europa.eu/social/main.jsp?catId=1202 
-    * United Nations: Convention on the Rights of Persons with Disabilities (CRPD): https://www.un.org/development/desa/disabilities/convention-on-the-rights-of-persons-with-disabilities.html 
   -->
   <!-- Example pages:
     * with old-fashioned frames: "TITUS: Thesaurus Indogermanischer Text- und Sprachmaterialien": http://titus.fkidg1.uni-frankfurt.de/indexe.htm 
