F. Palinkas articles on GitHub.

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -195,6 +195,14 @@
         recording of a 50-minute presentation (uploaded on 9 June 2017).
         The presentation focuses on incorrect uses of <abbr>ARIA</abbr> that some developers erroneously think improve accessibility.
       </li>
+      <li>Frank M. Palinkas:
+        <a href="https://github.com/fmpalinkas/web-accessibility-tutorials/wiki/Replacing---%22noscript%22---with-accessible,-unobtrusive-DOM-JavaScript">Replacing "noscript" with accessible, unobtrusive <abbr>DOM</abbr> JavaScript</a>.
+        (Published on GitHub; 05.02.2016).
+      </li>
+      <li>Frank M. Palinkas:
+        <a href="https://github.com/fmpalinkas/web-accessibility-tutorials/wiki/Using-WAI-ARIA-Roles-with-JSON-LD">Using <abbr>WAI</abbr> <abbr>ARIA</abbr> Roles with <abbr>JSON</abbr> <abbr>LD</abbr></a>.
+        (Published on GitHub; 05.02.2016).
+      </li>
     </ul>
     <!-- CSS layouts & accessibility?
       * CSS flexbox @ HTML5 Please: http://html5please.com/#flexbox 
