Vance Bell: College Recommended Web a11y tools.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -326,9 +326,13 @@
         <a href="https://www.timeshighereducation.com/blog/disability-campus-we-do-not-practise-best-practice-and-it-high-time-we-did">Disability on Campus: ‘We do not practise best practice, and it is high time that we did’</a>,
         <i class="magazine">Times Higher Education</i>, 17 May 2017.
       </li>
-      <li>Priscila Zigunovas:
+      <li>Zigunovas, Priscila:
         <a href="http://elearnmagazine.com/challenge-making-education-accessible/">The challenge of making education accessible to all</a>,
         <i class="magazine">e-learn</i>, 16.08.2017 (sponsored by Blackboard).
+      </li>
+      <li>Bell, Vance:
+        <a href="https://vancebell.com/blog/web-accessibility-testing-tools-recommended-by-colleges-and-universities/">College Recommended Web Accessibility Tools for Students, Staff and Faculty</a>,
+        <i class="blog">Vance Bell's blog</i>, 07.10.2017.
       </li>
     </ul>
 
