--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -304,6 +304,11 @@
         <a href="https://www.funka.com/en/our-assignments/standardisation/arkiv---standardiseringsarbete/accessibility-requirements-for-public-procurement/when-standardisation-needs-to-move-fast/">When standardisation needs to move fast</a>.
         <i class="website">Funk</i> (no date; early October 2017).
       </li>
+      <li>
+        <a href="https://www.telesurtv.net/english/news/Bolivia-Enacts-Law-to-Provide-Job-Stability-for-the-Disabled--20170926-0021.html">Bolivia Enacts Law to Provide Job Stability for the Disabled</a>
+        <a href="https://www.telesurtv.net/news/Evo-Morales-decreta-ley-que-protege-a-personas-con-discapacidad-20170926-0030.html" hreflang="es" lang="es">Evo Morales decreta ley que protege a personas con discapacidad</a>,
+        <i class="website">telesur</i>, 26.09.2017.
+      </li>
     </ul>
 
     <h2>Accessibility in the Physical World</h2>
