Cynthia Ng: Practical Guide to Improving Web A11y

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -149,6 +149,11 @@
         <i class="blog">Red Badger</i>, 02.10.2017.
         See also <a href="https://github.com/zoeabryant/accessible-address-finder">accessible-address-finder on GitHub</a>.
       </li>
+      <li>Ng, Cynthia:
+        <a href="https://quod.lib.umich.edu/w/weave/12535642.0001.701?view=text;rgn=main">A Practical Guide to Improving Web Accessibility</a>,
+        <i class="journal">Weave: Journal of Library User Experience</i>, Volume 1, Issue 7, 2017
+        (<span lang="en-US">licensed under a Creative Commons Attribution 3.0 License</span>).
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
