Tim Wright: Upgrading DOM Hierarchy.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -154,6 +154,10 @@
         <i class="journal">Weave: Journal of Library User Experience</i>, Volume 1, Issue 7, 2017
         (<span lang="en-US">licensed under a Creative Commons Attribution 3.0 License</span>).
       </li>
+      <li>Wright, Tim:
+        <a href="http://csskarma.com/blog/aria-owns/">Upgrading <abbr>DOM</abbr> Hierarchy for Accessibility with Aria-owns</a>,
+        <i class="blog"><abbr>css</abbr>karma blog</i>, 15.10.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
