Minor edit: missing space.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -1206,7 +1206,9 @@
       The videos are available on the Vimeo channel
       <a href="https://vimeo.com/channels/1267787">Inclusive Learning and Teaching</a>.
     </p>
-    <p>The list <a href="http://gpii.eu/moocap/?page_id=886"><abbr>OERs</abbr> for Inclusive Learning and Teaching Environments</a> is also available on the<abbr>MOOCAP</abbr> website.</p>
+    <p>The list <a href="http://gpii.eu/moocap/?page_id=886"><abbr>OERs</abbr> for Inclusive Learning and Teaching Environments</a> is also available on the
+      <abbr>MOOCAP</abbr> website.
+    </p>
     <h3>Week 1: Creating Inclusive Learning Practices</h3>
     <ul>
       <li><a href="https://www.futurelearn.com/courses/inclusive-learning-teaching/1/steps/209719">Step 1.1</a>: Why should we care about inclusive learning and teaching?</li>
