--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -389,6 +389,30 @@
       </li>
     </ul>
 
+    <h2>Accessibility Blogs</h2>
+    <ul>
+      <li>Alistair Duggin:
+        <a href="http://alistairduggin.co.uk/blog/accessibility-blogs/">Accessibility Blogs</a>,
+        <i class="blog">Alistair Duggin's blog</i>, 28.03.2012, updated 03.04.2012.
+      </li>
+      <li><a href="http://sp1ral.com/">Wendy Chisholm</a>.
+        <!--@@former career at W3C; now at Microsoft; not all blog post are about accessibility-->
+        Until 2009, this blog was maintained on
+        <a href="http://wendychisholm.blogspot.de/">blogspot</a>.
+      </li>
+      <li><a href="http://access4all.ch/blog/" hreflang="de" lang="de">Access-for-all-Blog</a>:
+        blog maintained by members of the Swiss foundation Access-for-all. 
+        All blog posts are in German.
+      </li>
+      <li><a href="http://universalaccess.blogspot.de/" hreflang="pt">UniversalAccess</a>:
+        blog by Jorge Fernandes, in Portuguese.
+      </li>
+      <li>
+        <a href="http://blog.zeit.de/stufenlos/" hreflang="de" lang="de">Stufenlos: Blog zur Barrierefreiheit und Inklusion</a>:
+        blog about the German accessibility that ran until February 2017.
+      </li>
+    </ul>
+
     <h2>Other Links</h2>
     <ul>
       <li>Sydell, Laura:
