--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
         <a href="http://ewallproject.eu/">eWall</a>.<!-- @@add description -->
         See the <a href="http://ewallproject.eu/documents/">downloadable documents</a>.
       </li>
+      <li>
+        <a href="http://www.cardiac-eu.org/">Cardiac</a>: this project aimed
+        <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research & development gaps, emerging trends, and generate a research agenda roadmap.</q>
+      </li>
       <!--
       <li>
         <a href=""></a>
