EU project related to (online) learning.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
         <a href="http://www.cardiac-eu.org/">Cardiac</a>: this project aimed
         <q> to create a platform that can bring together the various stakeholders in the area of accessible and assistive ICT with a view to identifying research & development gaps, emerging trends, and generate a research agenda roadmap.</q>
       </li>
+      <li>
+        <a href="http://inclusive-learning.eu/">Inclusive Learning Project (Supporting Trainers for an Inclusive Vocational Education and Training)</a>.
+      </li>
+      <li>
+        <a href="http://www.ict4ial.eu/"><abbr>ICT4IAL</abbr>: <abbr>ICT</abbr> for Information Accessibility in Learning</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
