Vinkle: Accessible React Apps.

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -203,6 +203,10 @@
         <a href="https://github.com/fmpalinkas/web-accessibility-tutorials/wiki/Using-WAI-ARIA-Roles-with-JSON-LD">Using <abbr>WAI</abbr> <abbr>ARIA</abbr> Roles with <abbr>JSON</abbr> <abbr>LD</abbr></a>.
         (Published on GitHub; 05.02.2016).
       </li>
+      <li>Scott Vinkle:
+        <a href="http://simplyaccessible.com/article/react-a11y/">Creating accessible React apps</a>,
+        <i class="website">Simply Accessible</i>, 19.10.2017.
+      </li>
     </ul>
     <!-- CSS layouts & accessibility?
       * CSS flexbox @ HTML5 Please: http://html5please.com/#flexbox 
