Wilson: Apps for dyslexia.

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -119,7 +119,8 @@
     </ul>
 
 
-    <h2>Fonts for Dyslexia</h2>
+    <h2>Dyslexia</h2>
+    <h3>Fonts for Dyslexia</h3>
     <p>The following fonts were specially developed for readers with dyslexia.
     </p>
     <ul>
@@ -132,6 +133,13 @@
       <li>
         <a href="http://www.k-type.com/fonts/lexie-readable/">Lexie Readable</a> (formerly Lexia Readable;
         not free, except for personal, educational or charity use).
+      </li>
+    </ul>
+    <h3>Tools for People with Dyslexia</h3>
+    <ul>
+      <li>Allan Wilson:
+        <a href="http://www.callscotland.org.uk/blog/new-and-revised-ipad-app-wheels/">New and Revised iPad App Wheels</a>,
+        <i class="blog">Call Scotland blog</i>, 26.10.2017.
       </li>
     </ul>
 
