--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -502,6 +502,10 @@
         <a href="https://www.unic.com/en/competencies/experts-blog/2015/interview-with-leonie-watson-how-accessibility-influences-the-work-of-developers-and-designer">Interview with Léonie Watson: How accessibility influences the work of developers and designer</a>,
         <i class="blog">unic blog</i>, 21.08.2015.
       </li>
+      <li>Faller, Patrick:
+        <a href="https://blogs.adobe.com/creativecloud/ibms-bo-campbell-on-the-win-win-of-designing-truly-accessible-products/"><abbr>IBM</abbr>’s Bo Campbell On The ‘Win-Win’ of Designing Truly Accessible Products</a>,
+        <i class="blog">Adobe Creative Cloud blog</i>, 04.10.2017.
+      </li>
       <!--
       <li>
         <a href=""></a>
