--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -510,6 +510,10 @@
         <a href="https://blogs.adobe.com/creativecloud/ibms-bo-campbell-on-the-win-win-of-designing-truly-accessible-products/"><abbr>IBM</abbr>’s Bo Campbell On The ‘Win-Win’ of Designing Truly Accessible Products</a>,
         <i class="blog">Adobe Creative Cloud blog</i>, 04.10.2017.
       </li>
+      <li>Bazzle, Steph:
+        <a href="https://www.inquisitr.com/3388499/visual-impairment-internet-what-i-learned-transcribing-facebook-memes/">Visual Impairment And Internet: What I Learned When I Started Transcribing Facebook Memes</a>,
+        <i class="website">Inquisitr</i>, 06.08.2016.
+      </li>
       <!--
       <li>
         <a href=""></a>
