Captions Neil Milliken.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -242,7 +242,7 @@
           </li>
           <li id="fl-step-1-05">Interview with Neil Milliken:
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslUzZIT0U3TjJHeFE">Interview with Neil Milliken (<abbr>MP4</abbr> video)</a>. -->
-            <a href="https://vimeo.com/203276646">Video on Vimeo</a> (no captions available);<!-- @@no captions yet -->
+            <a href="https://vimeo.com/203276646">Video on Vimeo</a>;
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqb1pfaER5aUU3SEE">video transcript</a>.
           </li>
         </ul>
