Caldwell: Accessibility and Business: captions.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -237,7 +237,7 @@
         <ul>
           <li id="fl-step-1-04">Interview with David Caldwell:
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslUTBZMGJYeThfZkU">Interview with David Caldwell (<abbr>MP4</abbr> video)</a>. -->
-            <a href="https://vimeo.com/202987197">Video on Vimeo</a> (no captions available);<!-- @@no captions yet -->
+            <a href="https://vimeo.com/202987197">Video on Vimeo</a>;
             <a href="https://drive.google.com/open?id=0B5w8EXu9wtOqaWl4ZUhERlRSV3c">video transcript</a>.
           </li>
           <li id="fl-step-1-05">Interview with Neil Milliken:
