Captions: Accessible Audiovisual Media.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -252,7 +252,7 @@
         <ul>
           <li>
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslWHdQb21YbDJRS1U"><abbr>MP4</abbr> video</a>. -->
-            <a href="https://vimeo.com/203282566">Video on Vimeo</a>.<!-- @@no subtitle file; 2017-01-26 -->
+            <a href="https://vimeo.com/203282566">Video on Vimeo</a>.<!--no subtitle file; 2017-01-26; VTT uploaded 10.11.2017-->
             <br />© Copyright University of Southampton, 2015.
           </li>
           <li>
@@ -291,7 +291,7 @@
           <li id="fl-step-1-11">
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslU29iRG5Lblh5Z2M">Accessible Audiovisual Media: <abbr>MP4</abbr> video</a>. -->
             <a href="https://vimeo.com/206126225">video on Vimeo</a>.
-            <!-- @@no subtitle file -->
+            <!--no subtitle file; CS: captions added, except for audio-described part-->
           </li>
           <li id="fl-step-1-12">
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslZ3JxQkd0dnhzZEk">Interview with Prof. Mike Wald about subtitles and captions: <abbr>MP4</abbr> video</a>. -->
