Captions for 'Subtitles and Captions' video.

--- a/oers/moocap-oers.html
+++ b/oers/moocap-oers.html
@@ -295,7 +295,7 @@
           </li>
           <li id="fl-step-1-12">
             <!-- <a href="https://drive.google.com/open?id=0B876rHn1ttslZ3JxQkd0dnhzZEk">Interview with Prof. Mike Wald about subtitles and captions: <abbr>MP4</abbr> video</a>. -->
-            <a href="https://vimeo.com/203312639">Interview with Prof. Mike Wald about subtitles and captions: video on Vimeo</a>.<!-- @@no subtitle file -->
+            <a href="https://vimeo.com/203312639">Interview with Prof. Mike Wald about subtitles and captions: video on Vimeo</a>.<!--captions added 2017-11-11-->
           </li>
         </ul>
       </li>
