Dalton & Rahman: Blind QA Testing part 1.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -167,6 +167,10 @@
         <a href="https://medium.com/salesforce-ux/4-major-patterns-for-accessible-drag-and-drop-1d43f64ebf09">4 Major Patterns for Accessible Drag and Drop</a>,
         <i class="blog">Salesforce <abbr>UX</abbr> blog</i>, 01.11.2017.
       </li>
+      <li>Dalton, Brian; Rahman, Saleem:
+        <a href="http://interaccess.ie/blind-qa-testing-part-1-a-screen-reader-users-perspective/">Blind <abbr>QA</abbr> testing (Part 1): A Screen Reader Users Perspective</a>,
+        <i class="website">InterAccess</i>, November 2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
