Sethfors: Captchas Suck.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -234,6 +234,10 @@
         <a href="http://www.w3.org/WAI/intro/accessibility.php"><q>web accessibility means that people with disabilities can use the Web</q></a>—the official definition from the <abbr>W3C</abbr>. 
         This is wrong. Web accessibility means that <em>people</em> can use the web.</q>
       </li>
+      <li>Sethfors, Hampus:
+        <a href="https://axesslab.com/captchas-suck/">Captchas Suck</a>,
+        <i class="website">Axess Lab</i>, 02.11.2017.
+      </li>
     </ul>
 
     <h2>Braille</h2>
