F. Ryan: disability diaries.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -349,6 +349,10 @@
         <a href="https://www.atmia.com/best-practices/">Best Practices Library Overview &amp; Executive Summaries</a>
         at <abbr title="ATM Industry Association">ATMIA</abbr>.
       </li>
+      <li>Ryan, Frances:
+        <a href="https://www.theguardian.com/inequality/2017/nov/15/whats-life-really-like-for-disabled-peopld-disability-diaries-reveal-all">What is life really like for disabled people? The Disability Diaries reveal all</a>,
+        <i class="newspaper">The Guardian</i>, 15.11.2017.
+      </li>
     </ul>
 
     <h2>Accessibility in Education</h2>
