Göransson: Alt-texts: The Ultimate Guide.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -171,6 +171,10 @@
         <a href="http://interaccess.ie/blind-qa-testing-part-1-a-screen-reader-users-perspective/">Blind <abbr>QA</abbr> testing (Part 1): A Screen Reader Users Perspective</a>,
         <i class="website">InterAccess</i>, November 2017.
       </li>
+      <li>Göransson, Daniel:
+        <a href="https://axesslab.com/alt-texts">Alt-texts: The Ultimate Guide</a>,
+        <i class="website">Axess Lab</i>, 15.10.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
