Brownlee: Designing for disabled people at Google.

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -246,6 +246,10 @@
         <a href="https://axesslab.com/captchas-suck/">Captchas Suck</a>,
         <i class="website">Axess Lab</i>, 02.11.2017.
       </li>
+      <li>Brownlee, John:
+        <a href="https://www.fastcodesign.com/3060090/how-designing-for-the-disabled-is-giving-google-an-edge">How Designing For Disabled People Is Giving Google An Edge</a>,
+        <i class="website">Co.Design</i>, 23.05.2016.
+      </li>
     </ul>
 
     <h2>Braille</h2>
