Kramer: Consider doing an audit...

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -183,6 +183,10 @@
         <a href="https://designschool.canva.com/blog/website-color-schemes/">Website Color Schemes: The Palettes of 50 Visually Impactful Websites to Inspire You</a>,
         <i class="blog">Canva Learn blog</i>, 26.01.2016.
       </li>
+      <li>Kramer, Melody:
+        <a href="https://www.poynter.org/news/how-accessible-your-website-disabled-consider-doing-audit-find-out">How accessible is your website for the disabled? Consider doing an audit to find out</a>,
+        <i class="website">Poynter</i>, 17.11.2017.
+      </li>
 
       <li>Stack Overflow Documentation: 
         <a href="http://stackoverflow.com/documentation/accessibility/topics">Accessibility</a>
